--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,24 +4,25 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "moex_store"
-version = "0.1.1"
+version = "0.1.139"
 authors = [
   { name="Celeevo", email="admin@backtrader.ru" },
 ]
 description = "MOEX Store for Backtrader"
 readme = "README.md"
 requires-python = ">=3.9"
-license = "MIT"
+# license = "MIT"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Operating System :: OS Independent"
+    "Operating System :: OS Independent",
+    "License :: OSI Approved :: MIT License"
 ]
 
 keywords = ["backtrader", "moex", "backtesting", "datafeed", "store", "cerebro"]
 dependencies = [
   "aiodns>=3.2.0",
   "aiohttp>=3.9.5",
-  "aiomoex>=2.1.2",
+  "aiomoex>=2.0.0,<2.1.0",
   "aioresponses>=0.7.6",
   "aiosignal>=1.3.1",
   "attrs>=23.2.0",
