--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,9 @@ dependencies = [
   "frozenlist>=1.4.1",
   "idna>=3.7",
   "kiwisolver>=1.4.5",
-  "matplotlib>=3.8.4",
+  "matplotlib==3.8.4",
   "multidict>=6.0.5",
-  "numpy>=2.0.1",
+  "numpy>=2.0.1,<3",
   "packaging>=24.1",
   "pandas>=2.2.2",
   "pillow>=10.4.0",
